--- a/Assets/Azimuth/DES2/Azimuth.asmdef
+++ b/Assets/Azimuth/DES2/Azimuth.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "TriGrid",
-    "rootNamespace": "TriGrid",
-    "references": [
-        "Azimuth.DES"
-    ],
+    "name": "Azimuth.DES",
+    "rootNamespace": "",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
